maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: '=' expected but identifier found.
def void propageIndication(x:Integer, y:Integer){
         ^JediEscaper:51: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^